5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1585_1017.log
== TEST (2019-03-26 10:21:50) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radiands(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t2 = radiands(float(input()))
NameError: name 'radiands' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:46) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t2 = radiands(float(input()))
NameError: name 'radiands' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:10) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t2 = radiands(float(input()))
NameError: name 'radiands' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:23) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:35) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:14) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:27:01) 
-- CODE:
from math import * 

raio = 6371.01 
t1 = radians(float(input("Latitude de P1: " )))
g1  = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
d = raio*acos(sin(t1)*sin(t2) + cos(t1)*cos(t2)*cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.14458
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
